--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "new": "plop"
+    "new": "plop",
+    "storybook": "sb dev -p 6006"
   },
   "dependencies": {
     "@types/node": "20.6.2",
@@ -24,9 +25,19 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.4.2",
+    "@storybook/addon-interactions": "^7.4.2",
+    "@storybook/addon-links": "^7.4.2",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.2",
+    "@storybook/nextjs": "^7.4.2",
+    "@storybook/react": "^7.4.2",
+    "@storybook/testing-library": "^0.2.1",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "plop": "^4.0.0",
     "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "storybook": "^7.4.2"
   }
 }
