--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
+  "printWidth": 120,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
